Fix width of content images on smaller screens

--- a/Radzen.DocFX/templates/radzen/styles/main.css
+++ b/Radzen.DocFX/templates/radzen/styles/main.css
@@ -999,6 +999,7 @@ article > dl dd {
 }
 article img {
   display: block;
+  width: 100%;
   max-width: 800px;
   margin: 40px auto;
   border-radius: 4px;
